--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "server": "json-server --watch data/cities.json --port 3000"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "json-server": "^0.17.4",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
-    "react-router-dom": "^6.29.0"
+    "react-router-dom": "^6.29.0",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -28,6 +30,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
   }
